@@ -376,4 +376,5 @@ Issue #2149223 by johnv: Moved code from workflow_allowable_transitions to centr
 Issue #2149223 by johnv: Moved code from workflow_transition_allowed to WorkflowConfigTransition::isAllowed().
 Issue #2165179 by colan: Fixed update of workflow_node_history.
 Issue #2160375 by Matthijs: Added workflow tab for all entities.
+Issue #2112199 by johnv: Fixed messages by PAReview.sh in WorkflowItem.php.
 
